--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "watson/rememberable",
+    "name": "opgginc/rememberable",
     "description": "Query caching for Laravel 5",
     "keywords": ["laravel", "eloquent", "caching", "remember"],
     "license": "MIT",
