--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,13 @@
 {
     "name": "opgginc/rememberable",
-    "description": "Query caching for Laravel 5",
+    "description": "Query caching for Laravel 5 with jenssegers's MongoDB ORM",
     "keywords": ["laravel", "eloquent", "caching", "remember"],
     "license": "MIT",
     "authors": [
+        {
+            "name": "Sangrak Choi",
+            "email": "kars@op.gg"
+        },
         {
             "name": "Dwight Watson",
             "email": "dwight@studiousapp.com"
